deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pikatwo-be-deploy
  labels:
    app: pikatwo-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pikatwo-be
  template:
    metadata:
      labels:
        app: pikatwo-be
    spec:
      containers:
        - name: pikatwo-be
          image: daisyjeon/pikatwo-be:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: datadir
              mountPath: /home/pikatwo/
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: pikatwo-app-pvc
