deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pikatwo-be-svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: pikatwo-be
  type: LoadBalancer
